--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-heroku==0.3.1
 djangorestframework==3.12.4
 gunicorn==20.1.0
 idna==3.2
+lxml==4.6.3
 psycopg2==2.9.1
 python-decouple==3.4
 pytz==2021.1
