--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.0.6
 decorator==5.1.0
 dj-database-url==0.5.0
 Django==3.2.7
+django-cors-headers==3.8.0
 django-heroku==0.3.1
 djangorestframework==3.12.4
 gunicorn==20.1.0
