--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,24 +1,32 @@
 name: Django CI
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: push
+
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
+
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.9.*]
+        python-version: [3.7.*, 3.8.*, 3.9.*]
+
+    services:
+      db:
+        image: postgres
+        env:
+          POSTGRES_DB: jadavjobs_adminDB
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: Dr982498@
+        ports:
+          - 5432:5432
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
