--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,38 @@
+2to3==1.0
+amqp==5.0.6
+APScheduler==3.8.0
 asgiref==3.4.1
 beautifulsoup4==4.10.0
+billiard==3.6.4.0
+celery==5.1.2
 certifi==2021.5.30
 charset-normalizer==2.0.6
+click==7.1.2
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 decorator==5.1.0
 dj-database-url==0.5.0
 Django==3.2.7
 django-cors-headers==3.8.0
+django-crontab==0.7.1
 django-heroku==0.3.1
 djangorestframework==3.12.4
 gunicorn==20.1.0
 idna==3.2
+kombu==5.1.0
 lxml==4.6.3
+prompt-toolkit==3.0.20
 psycopg2==2.9.1
 python-decouple==3.4
 pytz==2021.1
 requests==2.26.0
 selenium==3.141.0
+six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.2
+tzlocal==2.1
 urllib3==1.26.6
+vine==5.0.0
+wcwidth==0.2.5
 whitenoise==5.3.0
